--- a/it/index.html
+++ b/it/index.html
@@ -310,7 +310,7 @@
 		</div>
 
 		<nav>
-			<a class="button round" href="https://github.com/saloniamatteo">
+			<a class="button round" href="https://github.com/saloniamatteo/saloniamatteo.github.io">
 				<i>arrow_forward</i> Vai
 			</a>
 		</nav>
