Add translated packages

--- a/en/packages.html
+++ b/en/packages.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
-<html lang="it">
+<html lang="en">
 <head>
 	<title>Packages - Salonia Matteo</title>
 
 	<!-- Optimize page loading on some devices -->
 	<meta charset="utf-8">
 	<meta content='width=device-width, initial-scale=1' name='viewport'>
-	<meta name="description" content="Pacchetti di Salonia Matteo per Gentoo Linux.">
+	<meta name="description" content="Packages for Gentoo Linux from Salonia Matteo.">
 
 	<!-- Social media preview -->
 	<meta property="og:title"	content="Salonia Matteo">
-	<meta property="og:url"		content="https://salonia.it/it/packages.html">
-	<meta property="og:description"	content="Pacchetti di Salonia Matteo per Gentoo Linux.">
+	<meta property="og:url"		content="https://salonia.it/en/packages.html">
+	<meta property="og:description"	content="Packages for Gentoo Linux from Salonia Matteo.">
 	<meta property="og:image"	content="https://salonia.it/favicon.png">
 
 	<!-- Twitter-specific -->
 	<meta property="twitter:title"		content="Salonia Matteo">
 	<meta property="twitter:card"		content="summary_large_image">
-	<meta property="twitter:description"	content="Pacchetti di Salonia Matteo per Gentoo Linux.">
+	<meta property="twitter:description"	content="Packages for Gentoo Linux from Salonia Matteo.">
 	<meta property="twitter:image"		content="https://salonia.it/favicon.png">
 
 	<!--Favicon-->
