--- a/en/packages.html
+++ b/en/packages.html
@@ -6,18 +6,18 @@
 	<!-- Optimize page loading on some devices -->
 	<meta charset="utf-8">
 	<meta content='width=device-width, initial-scale=1' name='viewport'>
-	<meta name="description" content="Packages for Gentoo Linux from Salonia Matteo.">
+	<meta name="description" content="Packages for Gentoo Linux by Salonia Matteo.">
 
 	<!-- Social media preview -->
 	<meta property="og:title"	content="Salonia Matteo">
 	<meta property="og:url"		content="https://salonia.it/en/packages.html">
-	<meta property="og:description"	content="Packages for Gentoo Linux from Salonia Matteo.">
+	<meta property="og:description"	content="Packages for Gentoo Linux by Salonia Matteo.">
 	<meta property="og:image"	content="https://salonia.it/favicon.png">
 
 	<!-- Twitter-specific -->
 	<meta property="twitter:title"		content="Salonia Matteo">
 	<meta property="twitter:card"		content="summary_large_image">
-	<meta property="twitter:description"	content="Packages for Gentoo Linux from Salonia Matteo.">
+	<meta property="twitter:description"	content="Packages for Gentoo Linux by Salonia Matteo.">
 	<meta property="twitter:image"		content="https://salonia.it/favicon.png">
 
 	<!--Favicon-->
